Add production JVB GC profiles